// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Navbar should render Navbar component when logged in 1`] = `
<div>
  <nav
    class="bg-gray-800 p-4"
  >
    <div
      class="container mx-auto flex justify-between items-center"
    >
      <a
        class="text-white text-xl"
        href="/"
      >
        Elvish Translator
      </a>
      <div
        class="flex items-center gap-4"
      >
        <a
          class="text-white"
          href="/favourites"
        >
          Favourites
        </a>
        <button
          class="text-white"
        >
          Logout
        </button>
      </div>
    </div>
  </nav>
</div>
`;

exports[`components/Navbar should render Navbar component when logged out 1`] = `
<div>
  <nav
    class="bg-gray-800 p-4"
  >
    <div
      class="container mx-auto flex justify-between items-center"
    >
      <a
        class="text-white text-xl"
        href="/"
      >
        Elvish Translator
      </a>
      <div
        class="flex items-center gap-4"
      >
        <a
          class="text-white"
          href="/favourites"
        >
          Favourites
        </a>
        <button
          class="text-white"
        >
          Login
        </button>
      </div>
    </div>
  </nav>
</div>
`;
